CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_wtlst_hist__x/sfrosit_t_sbsd_case_wtlst_hist__x.object-meta.xml
<CustomObject>
    <description>sfrosit$t_sbsd_case_wtlst_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>sfrosit$t_sbsd_case_wtlst_hist</externalName>
    <label>Legacy Waitlist/Enrollment Freeze Hist</label>
    <pluralLabel>Legacy Waitlists/Enrollment Freezes Hist</pluralLabel>
</CustomObject>