CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_wtlst_hist__x/fields/cde_reason_removal__c.field-meta.xml
<CustomField>
    <fullName>cde_reason_removal__c</fullName>
    <description>cde_reason_removal</description>
    <externalDeveloperName>cde_reason_removal</externalDeveloperName>
    <label>Removal code reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>