CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_wtlst_hist__x/fields/dte_end_effv_wtlst__c.field-meta.xml
<CustomField>
    <fullName>dte_end_effv_wtlst__c</fullName>
    <description>dte_end_effv_wtlst</description>
    <externalDeveloperName>dte_end_effv_wtlst</externalDeveloperName>
    <label>Waitlist end effective date</label>
    <type>Date</type>
</CustomField>