CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_wtlst_hist__x/fields/idn_sbsd_case_wtlst__c.field-meta.xml
<CustomField>
    <fullName>idn_sbsd_case_wtlst__c</fullName>
    <description>idn_sbsd_case_wtlst</description>
    <externalDeveloperName>idn_sbsd_case_wtlst</externalDeveloperName>
    <label>Case Waitlist ID</label>
    <length>50</length>
    <referenceTargetField>T_SBSD_CASE_WTLST__c.IDN_EXTNL__c</referenceTargetField>
    <referenceTo>T_SBSD_CASE_WTLST__c</referenceTo>
    <relationshipLabel>Legacy Waitlist/Enrollment Freeze Hist</relationshipLabel>
    <relationshipName>sfrosit_t_sbsd_case_wtlst_hist</relationshipName>
    <type>IndirectLookup</type>
</CustomField>